feat(home): substituir logos por convite real a parcerias + form Netlify; melhorar Hero, cores e CTA

--- a/index.html
+++ b/index.html
@@ -23,6 +23,12 @@
     <form name="newsletter" data-netlify="true" netlify-honeypot="bot-field" hidden>
       <input type="text" name="email" />
     </form>
+    <form name="parcerias" data-netlify="true" netlify-honeypot="campo-extra" hidden>
+      <input type="text" name="empresa" />
+      <input type="email" name="email" />
+      <input type="text" name="site" />
+      <textarea name="objetivos"></textarea>
+    </form>
     <div id="root"></div>
     <script type="module" src="/src/main.tsx"></script>
   </body>
